# z42

./: .gitattributes  .gitignore  LICENSE  README.md  justfile  versions.toml
examples/embedding/hello_rust/: Cargo.toml  README.md
examples/embedding/hello_rust/src/: main.rs
src/runtime/: Cargo.toml  README.md  build.rs
src/runtime/benches/: README.md  gc_cycle_bench.rs  smoke_bench.rs
src/runtime/crates/: README.md
src/runtime/crates/z42-abi/: Cargo.toml  README.md
src/runtime/crates/z42-abi/src/: lib.rs
src/runtime/crates/z42-abi/tests/: abi_layout_tests.rs
src/runtime/crates/z42-compression/: Cargo.toml
src/runtime/crates/z42-compression/src/: compression.rs  compression_tests.rs  lib.rs
src/runtime/crates/z42-host/: Cargo.toml
src/runtime/crates/z42-hostrun/: Cargo.toml
src/runtime/crates/z42-hostrun/src/: lib.rs
src/runtime/crates/z42-macros/: Cargo.toml  README.md
src/runtime/crates/z42-macros/src/: lib.rs  methods_attr.rs  module_macro.rs  shim.rs  signature.rs  util.rs
src/runtime/crates/z42-macros/tests/: expand_smoke.rs
src/runtime/crates/z42-macros/tests/fail/: derive_z42type_redirect.rs  derive_z42type_redirect.stderr  module_invalid_name.rs  (+5 more)
src/runtime/crates/z42-rs/: Cargo.toml  README.md
src/runtime/crates/z42-rs/src/: lib.rs  native_helpers.rs  traits.rs  types.rs
src/runtime/crates/z42-rs/tests/: skeleton_tests.rs
src/runtime/examples/: signal_crash_helper.rs
src/runtime/include/: README.md  z42_abi.h  z42_host.h
src/runtime/src/: aot.rs  bytecode.rs  config.rs  counters.rs  interp.rs  jit.rs  lib.rs  main.rs  main_tests.rs  observer.rs  package.rs  project.rs  signal_handler.rs  signal_handler_tests.rs  types.rs  vm.rs  vm_context.rs  vm_context_tests.rs
src/runtime/src/corelib/: array.rs  array_tests.rs  bench.rs  bench_tests.rs  char.rs  collections.rs  convert.rs  convert_tests.rs  crypto.rs  crypto_tests.rs  fs.rs  fs_tests.rs  gc.rs  io.rs  io_tests.rs  math.rs  mod.rs  network.rs  network_tests.rs  object.rs  platform.rs  platform_tests.rs  process.rs  process_tests.rs  reflection.rs  reflection_tests.rs  str_meta.rs  str_meta_tests.rs  string.rs  string_builder.rs  sync.rs  sync_tests.rs  system.rs  system_tests.rs  tests.rs  threading.rs  threading_tests.rs  tls.rs  tls_tests.rs
src/runtime/src/diagnostics/: mod.rs  tests.rs
src/runtime/src/exception/: mod.rs  tests.rs
src/runtime/src/gc/: README.md  arc_heap.rs  heap.rs  heap_tests.rs  mod.rs  mode.rs  rc_heap.rs  rc_heap_tests.rs  refs.rs  region.rs  region_tests.rs  safepoint.rs  safepoint_tests.rs  snapshot.rs  snapshot_tests.rs  soft_registry.rs  types.rs  types_tests.rs
src/runtime/src/gc/arc_heap_tests/: allocation.rs  collection.rs  concurrent_mark.rs  config_stats.rs  cycle_collection.rs  events.rs  finalization.rs  generational.rs  invariants.rs  mark_phase.rs  mod.rs  mode_selection.rs  multi_vm.rs  object_model.rs  oom.rs  pause_histogram.rs  roots.rs  send_sync.rs  stress.rs  weak_refs.rs  write_barriers.rs
src/runtime/src/gc/rc_heap_tests/: allocation.rs  collection.rs  config_stats.rs  cycle_collection.rs  events.rs  finalization.rs  mod.rs  object_model.rs  oom.rs  roots.rs  send_sync.rs  weak_refs.rs
src/runtime/src/host/: config.rs  entry.rs  error.rs  host_tests.rs  marshal.rs  mod.rs  module.rs  ops.rs  resolver.rs  state.rs
src/runtime/src/interp/: README.md  builtins.rs  dispatch.rs  exec_address.rs  exec_array.rs  exec_call.rs  exec_instr.rs  exec_native.rs  exec_object.rs  exec_value.rs  exec_value_tests.rs  exec_vcall.rs  helpers.rs  mod.rs  ops.rs
src/runtime/src/jit/: README.md  frame.rs  helpers.rs  helpers_arith.rs  helpers_closure.rs  helpers_mem.rs  helpers_object.rs  mod.rs  translate.rs  vm_interface.rs  vm_interface_tests.rs
src/runtime/src/jit/helpers/: arith.rs  array.rs  call.rs  closure.rs  control.rs  mod.rs  object.rs  registry.rs  value.rs  vcall.rs
src/runtime/src/metadata/: binary.rs  build_id.rs  build_id_tests.rs  bytecode.rs  bytecode_serde.rs  bytecode_tests.rs  constraint_tests.rs  formats.rs  ir_type.rs  ir_type_tests.rs  lazy_loader.rs  lazy_loader_tests.rs  loader.rs  loader_tests.rs  merge.rs  merge_tests.rs  mod.rs  name_index.rs  name_index_tests.rs  project.rs  resolver.rs  sidecar_tests.rs  string_id.rs  test_index.rs  test_index_tests.rs  tokens.rs  tokens_tests.rs  types.rs  types_tests.rs  well_known_names.rs  zbc_reader.rs  zbc_reader_tests.rs
src/runtime/src/native/: README.md  dispatch.rs  dispatch_tests.rs  error.rs  exports.rs  ext.rs  ext_tests.rs  loader.rs  marshal.rs  marshal_tests.rs  mod.rs  registry.rs  registry_tests.rs
src/runtime/src/pal/: README.md  fs.rs  fs_tests.rs  mod.rs  signal.rs  signal_tests.rs  system.rs  system_tests.rs
src/runtime/src/thread/: mod.rs
src/runtime/tests/: cross_thread_smoke.rs  manifest_schema_validation.rs  native_interop_e2e.rs  native_opcode_trap.rs  native_pin_e2e.rs  signal_handler_e2e.rs  zbc_compat.rs
src/runtime/tests/cross-zpkg/: README.md
src/runtime/tests/data/: example-manifest.json  invalid-manifest-missing-types.json  manifest-with-extra-fields.json
src/runtime/tests/data/embedding_hello/: source.z42
src/runtime/tests/data/numz42-c/: numz42.c
src/runtime/tests/data/z42_native_e2e/: source.z42
src/runtime/tests/golden/01_hello/: expected.zasm  expected_ir.json  source.z42  source.z42ir.json
src/toolchain/host/embed/: Cargo.toml
src/toolchain/host/embed/src/: lib.rs
src/toolchain/launcher/: Cargo.toml  README.md
src/toolchain/launcher/core/: apphost.z42  launcher.z42  launcher_cli.z42  launcher_export.z42  launcher_export_android.z42  launcher_export_ios.z42  launcher_export_wasm.z42  launcher_network.z42  launcher_workload.z42  z42.launcher.z42.toml
src/toolchain/launcher/src/: apphost.rs  lib.rs  main.rs
src/toolchain/test-runner/: Cargo.toml  README.md
src/toolchain/test-runner/src/: bootstrap.rs  discover.rs  exec.rs  main.rs  parallel.rs  result.rs  runner.rs  runner_tests.rs  skip_eval.rs  skip_eval_tests.rs
src/toolchain/test-runner/src/format/: json.rs  junit.rs  mod.rs  pretty.rs  tap.rs
(+4168 files in other folders)
