[workspace]
members = [".", "crates/z42-abi", "crates/z42-rs", "crates/z42-macros"]

[package]
name = "z42"
version = "0.1.0"
edition = "2021"
description = "z42 virtual machine — interpreter, JIT, and AOT backends"

[[bin]]
name = "z42vm"
path = "src/main.rs"

[lib]
name = "z42"
path = "src/lib.rs"
# crate-type 用 cdylib + staticlib + rlib：
# - cdylib：C 嵌入消费者用 .dylib / .so / .dll
# - staticlib：C 嵌入静态链接 .a / .lib
# - rlib：Rust 内 path/git 依赖（其他 Rust crate 引用 z42）
# 来自 redesign-artifact-layout (2026-05-12)
crate-type = ["cdylib", "staticlib", "rlib"]

[build-dependencies]
cc = "1"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"   # JSON interchange format (legacy .z42ir.json)
toml = "0.8"       # z42.toml project manifest format
bincode = "1"      # compact binary format (.zbc)

# Error handling
anyhow = "1"
thiserror = "1"

# Bitflags (used by metadata::test_index for TestFlags; spec R1)
bitflags = "2"

# BLAKE3 hash for zbc/zpkg build_id (split-debug-symbols, 1.2/0.3+)
blake3 = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Native interop — Tier 1 ABI runtime (spec C2)
#
# 2026-05-12 add-platform-wasm Stage 0: gated behind `native-interop` feature
#   so wasm builds (no dlopen / no libffi support) deselect it cleanly.
# 2026-05-12 add-platform-ios Stage 0: dropped the `system` feature flag on
#   libffi. Reason: `-lffi` is not available in the iOS / Android SDKs (the
#   system libffi exists in libSystem at runtime but isn't exposed for static
#   link during cross-compile). Falling back to libffi-sys's bundled C build
#   works uniformly for desktop, iOS, and Android at a small first-build cost.
# 2026-05-12 redesign-artifact-layout: 启用 `system` feature 用 homebrew/apt 的 libffi。
# libffi-sys 的 bundled C build 在新 Apple clang 上汇编 sysv.S 失败（CFI advance_loc
# 兼容性问题）；iOS / Android / WASM 不依赖 libffi（走 interp-only feature 集）。
libffi     = { version = "3.2", optional = true, features = ["system"] }
libloading = { version = "0.8", optional = true }
z42-abi    = { path = "crates/z42-abi" }

# JIT backend — Cranelift (optional; enabled via `jit` feature)
cranelift-codegen = { version = "0.115", features = ["unwind"], optional = true }
cranelift-frontend = { version = "0.115", optional = true }
cranelift-jit      = { version = "0.115", optional = true }
cranelift-module   = { version = "0.115", optional = true }
cranelift-native   = { version = "0.115", optional = true }

[features]
# 2026-05-07 add-runtime-feature-flags (P4.1):
# - default = ["jit", "native-interop"] keeps `cargo build` behavior unchanged
# - `jit` enables the Cranelift JIT backend (desktop x64/aarch64 only)
# - `native-interop` enables Tier 1 native-extension ABI (dlopen + libffi).
#   2026-05-12 add-platform-wasm Stage 0 split this out so wasm builds can
#   deselect it (no dlopen / no libffi support inside the wasm sandbox).
# - `aot` is a placeholder for future AOT compilation (M9; no impl yet)
# - `interp-only` is intent-only (no extra deps); used by platform presets
# - platform presets are convenience combos for `--no-default-features --features <preset>`
default        = ["jit", "native-interop"]
jit            = ["dep:cranelift-codegen", "dep:cranelift-frontend", "dep:cranelift-jit", "dep:cranelift-module", "dep:cranelift-native"]
native-interop = ["dep:libffi", "dep:libloading"]
aot            = []
interp-only    = []
wasm           = ["interp-only"]
ios            = ["interp-only", "aot"]
android        = ["interp-only", "aot"]

[dev-dependencies]
jsonschema = { version = "0.20", default-features = false }
z42-rs     = { path = "crates/z42-rs" }
criterion  = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "smoke_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
