[workspace]
members = [".", "crates/z42-abi", "crates/z42-rs", "crates/z42-macros"]

[workspace.package]
# mirror of versions.toml [project].version — drift enforced by scripts/check-versions-drift.sh
version = "0.1.0"

[package]
name = "z42"
version.workspace = true
edition = "2021"
description = "z42 virtual machine — interpreter, JIT, and AOT backends"

[[bin]]
name = "z42vm"
path = "src/main.rs"

[lib]
name = "z42"
path = "src/lib.rs"
# 默认 rlib only —— Rust 内 path/git 依赖（z42-test-runner / z42-host crate 引用）。
# C 嵌入用的 cdylib / staticlib 在分发 package 步骤通过额外的 cargo build 命令产出
# （package.sh），避免主 build 流程出现 cdylib/staticlib/rlib 三套 metadata 冲突。
# 来自 redesign-artifact-layout (2026-05-12)

[build-dependencies]
cc = "1"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"   # JSON interchange format (legacy .z42ir.json)
toml = "0.8"       # z42.toml project manifest format
bincode = "1"      # compact binary format (.zbc)

# Error handling
anyhow = "1"
thiserror = "1"

# Bitflags (used by metadata::test_index for TestFlags; spec R1)
bitflags = "2"

# BLAKE3 hash for zbc/zpkg build_id (split-debug-symbols, 1.2/0.3+)
blake3 = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Native interop — Tier 1 ABI runtime (spec C2)
#
# 2026-05-12 add-platform-wasm Stage 0: gated behind `native-interop` feature
#   so wasm builds (no dlopen / no libffi support) deselect it cleanly.
# 2026-05-10 vendored-libffi-upgrade: bumped to libffi 5.1 (libffi-sys 4.1)
#   to pick up the fixed bundled libffi 3.4.7 sources. Earlier libffi-sys 2.3
#   shipped a snapshot whose `sysv.S` failed to assemble under new Apple
#   clang (`CFI advance_loc out of range`); 5.1's bundle compiles cleanly on
#   desktop macOS/Linux, aarch64-apple-ios, and aarch64-linux-android. No
#   `system` feature — bundled build keeps the toolchain identical across
#   host and cross-compile targets at the cost of a one-time first build.
libffi     = { version = "5.1", optional = true }
libloading = { version = "0.8", optional = true }
z42-abi    = { path = "crates/z42-abi" }

# JIT backend — Cranelift (optional; enabled via `jit` feature)
cranelift-codegen = { version = "0.115", features = ["unwind"], optional = true }
cranelift-frontend = { version = "0.115", optional = true }
cranelift-jit      = { version = "0.115", optional = true }
cranelift-module   = { version = "0.115", optional = true }
cranelift-native   = { version = "0.115", optional = true }

[features]
# 2026-05-07 add-runtime-feature-flags (P4.1):
# - default = ["jit", "native-interop"] keeps `cargo build` behavior unchanged
# - `jit` enables the Cranelift JIT backend (desktop x64/aarch64 only)
# - `native-interop` enables Tier 1 native-extension ABI (dlopen + libffi).
#   2026-05-12 add-platform-wasm Stage 0 split this out so wasm builds can
#   deselect it (no dlopen / no libffi support inside the wasm sandbox).
# - `aot` is a placeholder for future AOT compilation (M9; no impl yet)
# - `interp-only` is intent-only (no extra deps); used by platform presets
# - platform presets are convenience combos for `--no-default-features --features <preset>`
default        = ["jit", "native-interop"]
jit            = ["dep:cranelift-codegen", "dep:cranelift-frontend", "dep:cranelift-jit", "dep:cranelift-module", "dep:cranelift-native"]
native-interop = ["dep:libffi", "dep:libloading"]
aot            = []
interp-only    = []
wasm           = ["interp-only"]
ios            = ["interp-only", "aot", "native-interop"]
android        = ["interp-only", "aot", "native-interop"]

# Platform / system info (Std.Platform / Std.OperatingSystem stdlib, 2026-05-14).
# Only needed on unix-like for gethostname / uname; windows uses winapi via direct
# FFI binding (no extra crate); wasm falls through to graceful "" returns.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
jsonschema = { version = "0.20", default-features = false }
z42-rs     = { path = "crates/z42-rs" }
criterion  = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "smoke_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
