[workspace]
members = [".", "crates/z42-abi", "crates/z42-rs", "crates/z42-macros", "crates/z42-compression", "crates/z42-host", "crates/z42-hostrun"]
# fix-default-members-include-compression (2026-05-29): z42-compression is a
# cdylib loaded via dlopen at z42vm runtime — not a transitive dep of the
# main `z42` crate (only pulled in compile-time via `bundled-compression`
# feature, used on wasm). Without listing it as a default-member, the bare
# `cargo build --manifest-path src/runtime/Cargo.toml` invocations in
# `just build-runtime` and `z42 xtask.zpkg test lib` only built the root
# package; tests that touched Std.Compression hit "unknown builtin
# `__brotli_compress`" because no libz42_compression.{dylib,so,dll} was
# present in the search path. Listing it here makes every default build
# co-produce the cdylib without per-script explicit invocations.
default-members = [".", "crates/z42-compression"]

[workspace.package]
# mirror of versions.toml [project].version — drift enforced by `z42 xtask.zpkg deps check`
version = "0.3.0"

[package]
name = "z42"
version.workspace = true
edition = "2021"
description = "z42 virtual machine — interpreter, JIT, and AOT backends"

[[bin]]
name = "z42vm"
path = "src/main.rs"

[lib]
name = "z42"
path = "src/lib.rs"
# 默认 rlib only —— Rust 内 path/git 依赖（z42-test-runner / z42-host crate 引用）。
# C 嵌入用的 cdylib / staticlib 在分发 package 步骤通过额外的 cargo build 命令产出
# （package.sh），避免主 build 流程出现 cdylib/staticlib/rlib 三套 metadata 冲突。
# 来自 redesign-artifact-layout (2026-05-12)

[build-dependencies]
cc = "1"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"   # JSON interchange format (legacy .z42ir.json)
toml = "0.8"       # z42.toml project manifest format
bincode = "1"      # compact binary format (.zbc)

# Error handling
anyhow = "1"
thiserror = "1"

# Bitflags (used by metadata::test_index for TestFlags; spec R1)
bitflags = "2"

# Mutex / RwLock — used for VmCore shared state across threads (add-multithreading-foundation, 2026-05-19).
# parking_lot vs std::sync: ~2-5x faster uncontended; no poisoning (VM contexts don't benefit from poison-on-panic).
parking_lot = "0.12"

# BLAKE3 hash for zbc/zpkg build_id (split-debug-symbols, 1.2/0.3+)
blake3 = "1"

# OS-CSPRNG (Std.Crypto.SecureRandom) — add-csprng-to-crypto (2026-05-26).
# Wraps Linux getrandom(2) / macOS getentropy / Windows BCryptGenRandom.
# wasm32 excluded: getrandom requires `js` feature for wasm32-unknown-unknown
# but we cfg-gate crypto.rs to throw NotSupported there instead.
# (wasm bridge is add-csprng-wasm-bridge follow-up).

# Compression cdylib — add-z42-compression (2026-05-22).
# Optional dep, enabled by the `bundled-compression` feature (wasm-only by
# default; non-wasm targets dlopen the cdylib via native::ext at startup).
z42-compression = { path = "crates/z42-compression", optional = true }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
# `env-filter` enables Z42_LOG=... directive parsing in main.rs
# (docs/review.md Part 4 D2, 2026-05-25).
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# NOTE: POSIX signal handling crate `signal-hook-registry` is declared
# in the existing `[target.'cfg(unix)'.dependencies]` block below
# (next to `libc`) — single unix-deps section per Cargo.toml.

# Native interop — Tier 1 ABI runtime (spec C2)
#
# 2026-05-12 add-platform-wasm Stage 0: gated behind `native-interop` feature
#   so wasm builds (no dlopen / no libffi support) deselect it cleanly.
# 2026-05-10 vendored-libffi-upgrade: bumped to libffi 5.1 (libffi-sys 4.1)
#   to pick up the fixed bundled libffi 3.4.7 sources. Earlier libffi-sys 2.3
#   shipped a snapshot whose `sysv.S` failed to assemble under new Apple
#   clang (`CFI advance_loc out of range`); 5.1's bundle compiles cleanly on
#   desktop macOS/Linux, aarch64-apple-ios, and aarch64-linux-android. No
#   `system` feature — bundled build keeps the toolchain identical across
#   host and cross-compile targets at the cost of a one-time first build.
libffi     = { version = "5.1", optional = true }
libloading = { version = "0.8", optional = true }
z42-abi    = { path = "crates/z42-abi" }

# JIT backend — Cranelift (optional; enabled via `jit` feature)
cranelift-codegen = { version = "0.115", features = ["unwind"], optional = true }
cranelift-frontend = { version = "0.115", optional = true }
cranelift-jit      = { version = "0.115", optional = true }
cranelift-module   = { version = "0.115", optional = true }
cranelift-native   = { version = "0.115", optional = true }

[features]
# 2026-05-07 add-runtime-feature-flags (P4.1):
# - default = ["jit", "native-interop"] keeps `cargo build` behavior unchanged
# - `jit` enables the Cranelift JIT backend (desktop x64/aarch64 only)
# - `native-interop` enables Tier 1 native-extension ABI (dlopen + libffi).
#   2026-05-12 add-platform-wasm Stage 0 split this out so wasm builds can
#   deselect it (no dlopen / no libffi support inside the wasm sandbox).
# - `aot` is a placeholder for future AOT compilation (M9; no impl yet)
# - `interp-only` is intent-only (no extra deps); used by platform presets
# - platform presets are convenience combos for `--no-default-features --features <preset>`
default              = ["jit", "native-interop"]
jit                  = ["dep:cranelift-codegen", "dep:cranelift-frontend", "dep:cranelift-jit", "dep:cranelift-module", "dep:cranelift-native"]
native-interop       = ["dep:libffi", "dep:libloading"]
aot                  = []
interp-only          = []
# bundled-compression: statically link z42-compression instead of dlopen'ing it.
# Required on wasm (no dlopen); optional everywhere else.
bundled-compression  = ["dep:z42-compression"]
wasm                 = ["interp-only", "bundled-compression"]
# Mobile presets bundle compression too — these platforms either disallow
# dlopen (iOS App Store) or strongly prefer single-binary integration
# (Android JNI side-load convention). The separately-shipped
# libz42_compression.a in SDK packages is left as a belt-and-suspenders
# option for integrators who want manual linking control.
ios                  = ["interp-only", "aot", "native-interop", "bundled-compression"]
android              = ["interp-only", "aot", "native-interop", "bundled-compression"]

# Platform / system info (Std.Platform / Std.OperatingSystem stdlib, 2026-05-14).
# Only needed on unix-like for gethostname / uname; windows uses winapi via direct
# FFI binding (no extra crate); wasm falls through to graceful "" returns.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# getrandom excluded from wasm32: requires the `js` feature for
# wasm32-unknown-unknown; our crypto.rs cfg-gates that path to throw
# NotSupportedException instead (add-csprng-wasm-bridge follow-up).
getrandom = "0.2"
# add-net-socket-options-extended (2026-05-30): cross-platform setsockopt
# for SO_REUSEADDR / SO_KEEPALIVE. Rust networking working group crate;
# only deps libc on Unix; ships Winsock bindings on Windows.
socket2 = { version = "0.5", features = ["all"] }
# add-z42-net-tls (2026-06-03): pure-Rust TLS for Std.Net (HTTPS in
# HttpClient + raw TlsClient). rustls with the `ring` crypto backend
# (no OpenSSL / no aws-lc-rs C-toolchain dependency → identical build
# across host + cross-compile targets, same rationale as bundled libffi).
# webpki-roots bundles the Mozilla CA root set so cert verification works
# with zero host trust-store wiring. tls12 enabled for broad endpoint
# compatibility.
rustls       = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = "0.26"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
# POSIX signal handling — low-level register API (no monitor thread).
# Used by signal_handler.rs to install async-signal-safe handlers for
# SIGSEGV / SIGABRT / SIGFPE / SIGILL / SIGBUS (add-os-signal-handler
# spec, 2026-05-25). Windows builds skip via `#[cfg(unix)]` gate.
signal-hook-registry = "1.4"

[dev-dependencies]
jsonschema = { version = "0.20", default-features = false }
z42-rs     = { path = "crates/z42-rs" }
criterion  = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "smoke_bench"
harness = false

[[bench]]
name = "gc_cycle_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
