# Hello-world demo for the Tier 2 z42-host Rust embedding API.
#
# This Cargo.toml is a *template* shipped inside z42 host SDK packages
# (examples/hello_rust/Cargo.toml). The `z42-host` path-dep needs to be
# pointed at a working z42-host crate — see README.md.

[package]
name = "z42-host-hello-rust"
version = "0.1.0"
edition = "2021"
description = "Hello-world demo for the z42-host Tier 2 Rust embedding API."
publish = false

[[bin]]
name = "hello_rust"
path = "src/main.rs"

[dependencies]
# Point this at a checkout of the z42 repo's src/runtime/crates/z42-host/ crate.
# Future: crates.io publish (see roadmap "Rust crate publish" — currently deferred).
z42-host = { path = "../../../src/runtime/crates/z42-host" }
