# z42 launcher trampoline (add-z42-launcher, 2026-06-02).
# Minimal native binary `z42`: locate the bundled launcher runtime and exec
# the z42-written launcher core. All real logic lives in core/launcher.z42.
[package]
name    = "z42-launcher"
version = "0.1.0"
edition = "2021"
publish = false

# Shared host-resolve/exec logic for both bins (add-apphost).
[lib]
name = "z42_launcher"
path = "src/lib.rs"

[[bin]]
name = "z42"
path = "src/main.rs"

# Per-app apphost stub template (add-apphost). `z42 publish desktop` copies this
# binary and patches its embedded target placeholder with the app's zpkg path.
# NB: lives at src/apphost.rs (NOT src/bin/) — `.gitignore` ignores `bin/`.
[[bin]]
name = "apphost"
path = "src/apphost.rs"

[dependencies]
# App run path (locate z42vm + run app zpkg directly), shared with the apphost
# stub. Extracted from this crate's lib so the workload-owned apphost can reuse
# it without depending on the launcher (apphost-to-workload, 2026-06-18).
z42-hostrun = { path = "../../runtime/crates/z42-hostrun" }

[profile.release]
opt-level = "z"
lto       = true
strip     = true
