# z42 launcher trampoline (add-z42-launcher, 2026-06-02).
# Minimal native binary `z42`: locate the bundled launcher runtime and exec
# the z42-written launcher core. All real logic lives in core/launcher.z42.
[package]
name    = "z42-launcher"
version = "0.1.0"
edition = "2021"
publish = false

# Host-resolve/exec logic for the `z42` trampoline. The apphost stub moved to
# the desktop workload (src/toolchain/workload/desktop/platform/apphost); both
# share the app run path via z42-hostrun (apphost-to-workload, 2026-06-18).
[lib]
name = "z42_launcher"
path = "src/lib.rs"

[[bin]]
name = "z42"
path = "src/main.rs"

[dependencies]
# Shared "locate z42 home / vm" primitives used by the trampoline.
z42-hostrun = { path = "../../runtime/crates/z42-hostrun" }

[profile.release]
opt-level = "z"
lto       = true
strip     = true
