# z42-hostrun — locate a deployed z42vm (+ libs) and run an app's zpkg directly
# (apphost run path). Extracted from z42-launcher lib so the apphost stub (now
# owned by the desktop workload) and the launcher trampoline share one impl
# without the workload depending on the launcher crate.
# (apphost-to-workload, 2026-06-18)
[package]
name = "z42-hostrun"
version = "0.1.0"
edition = "2021"
publish = false
description = "Locate z42vm + libs and exec a deployed app's zpkg directly (apphost run path)."

[lib]
name = "z42_hostrun"
path = "src/lib.rs"
