# Per-app native apphost stub — owned by the desktop workload (apphost-to-workload,
# 2026-06-18). `z42 publish desktop` copies this binary and patches its embedded
# target placeholder with the app's zpkg path. Shares the "locate z42vm + run app
# zpkg directly" logic with the launcher trampoline via the z42-hostrun crate.
[package]
name = "z42-apphost"
version = "0.1.0"
edition = "2021"
publish = false
description = "Per-app native apphost stub — desktop workload publish artifact."

[[bin]]
name = "apphost"
path = "src/main.rs"

[dependencies]
z42-hostrun = { path = "../../../../../runtime/crates/z42-hostrun" }

[profile.release]
opt-level = "z"
lto       = true
strip     = true
